Fix issue with flex not displaying correctly on IE11

--- a/app/assets/stylesheets/marketing-site/front-custom/front-theme.scss
+++ b/app/assets/stylesheets/marketing-site/front-custom/front-theme.scss
@@ -33,6 +33,11 @@
       color: #ffffff;
     }
 
+    .hero-banner {
+      min-height: 100vh;
+      padding-top: 25vh;
+    }
+
     #hero-text {
       visibility: visible;
       margin: 0 auto;
